v1.0.0/modules/schema/pages/class/RUCZone.adoc
= `RUCZone`
:toclevels: 4


+++A specialized class of type AggregatedNode type. Defines RUC Zones. A forecast region represents a collection of Nodes for which the Market operator has developed sufficient historical demand and relevant weather data to perform a demand forecast for such area. The Market Operator may further adjust this forecast to ensure that the Reliability Unit Commitment produces adequate local capacity procurement.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:RUCZone`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AggregateNode.adoc[`AggregateNode`]
*** *`RUCZone`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
RUCZone {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



LossClearingResults {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



CnodeDistributionFactor {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



SubControlArea {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Pnode {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



AreaLoadCurve {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Instructions {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RTO {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RegisteredResource {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




RUCZone -> LossClearingResults: LossClearingResults


RUCZone -> CnodeDistributionFactor: CnodeDistributionFactor


RUCZone -> SubControlArea: SubControlArea


RUCZone -> Pnode: Pnode


RUCZone -> AreaLoadCurve: AreaLoadCurve


RUCZone -> Instructions: Instruction


RUCZone -> RTO: RTO


RUCZone -> RegisteredResource: RegisteredResource


RUCZone -> DiagramObject: DiagramObjects


RUCZone -> InstanceSet: InstanceSet


RUCZone -> Name: Names


RUCZone -> ChangeSetMember: PropertiesCIMDataObject


RUCZone -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<RTO,`RTO`>>
| 1
| xref::class/RTO.adoc[`RTO`]
| n/a

| <<LossClearingResults,`LossClearingResults`>>
| 0..*
| xref::class/LossClearingResults.adoc[`LossClearingResults`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<anodeType,`anodeType`>>
| 0..1
| xref::enumeration/AnodeType.adoc[`AnodeType`]
| +++Type of aggregated node+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<qualifASOrder,`qualifASOrder`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Processing Order for AS self-provisions for this region. The priority of this attribute directs the awards of any resource that resides in overlapping regions. The regions are processed in priority manner.+++

| <<AreaLoadCurve,`AreaLoadCurve`>>
| 0..*
| xref::class/AreaLoadCurve.adoc[`AreaLoadCurve`]
| n/a

| <<CnodeDistributionFactor,`CnodeDistributionFactor`>>
| 0..*
| xref::class/CnodeDistributionFactor.adoc[`CnodeDistributionFactor`]
| n/a

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Instruction,`Instruction`>>
| 0..*
| xref::class/Instructions.adoc[`Instructions`]
| n/a

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<Pnode,`Pnode`>>
| 0..*
| xref::class/Pnode.adoc[`Pnode`]
| n/a

| <<RegisteredResource,`RegisteredResource`>>
| 0..*
| xref::class/RegisteredResource.adoc[`RegisteredResource`]
| +++A RegisteredResource can be associated to only one AggregateNode if not connected to a Pnode or MktConnectivityNode.+++

| <<SubControlArea,`SubControlArea`>>
| 0..*
| xref::class/SubControlArea.adoc[`SubControlArea`]
| n/a

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#anodeType]
=== `anodeType`
+++Type of aggregated node+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.anodeType`
| Cardinality
| 0..1
| Type
| xref::enumeration/AnodeType.adoc[`AnodeType`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#AreaLoadCurve]
=== `AreaLoadCurve`


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.AreaLoadCurve`
| Cardinality
| 0..*
| Type
| xref::class/AreaLoadCurve.adoc[`AreaLoadCurve`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#CnodeDistributionFactor]
=== `CnodeDistributionFactor`


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.CnodeDistributionFactor`
| Cardinality
| 0..*
| Type
| xref::class/CnodeDistributionFactor.adoc[`CnodeDistributionFactor`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Instruction]
=== `Instruction`


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.Instruction`
| Cardinality
| 0..*
| Type
| xref::class/Instructions.adoc[`Instructions`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#LossClearingResults]
=== `LossClearingResults`


[cols="h,4",width=65%]
|===
| URI
| `cim:RUCZone.LossClearingResults`
| Cardinality
| 0..*
| Type
| xref::class/LossClearingResults.adoc[`LossClearingResults`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Pnode]
=== `Pnode`


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.Pnode`
| Cardinality
| 0..*
| Type
| xref::class/Pnode.adoc[`Pnode`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#qualifASOrder]
=== `qualifASOrder`
+++Processing Order for AS self-provisions for this region. The priority of this attribute directs the awards of any resource that resides in overlapping regions. The regions are processed in priority manner.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.qualifASOrder`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#RegisteredResource]
=== `RegisteredResource`
+++A RegisteredResource can be associated to only one AggregateNode if not connected to a Pnode or MktConnectivityNode.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.RegisteredResource`
| Cardinality
| 0..*
| Type
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#RTO]
=== `RTO`


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.RTO`
| Cardinality
| 1
| Type
| xref::class/RTO.adoc[`RTO`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#SubControlArea]
=== `SubControlArea`


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.SubControlArea`
| Cardinality
| 0..*
| Type
| xref::class/SubControlArea.adoc[`SubControlArea`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


